--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="search_destination_title">Search</string>
     <string name="more_destination_title">More</string>
 
+    <string name="no_favorites">No favorite stops yet!</string>
+
     <string name="no_data_available">No data available :(</string>
     <string name="no_data_available_suggestions">Please check your internet connection and try again. If the problem persists the city council service that provides this information may be undergoing maintenance.</string>
 
