--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,35 @@
 <resources>
     <string name="app_name">Transporte Zaragoza</string>
 
-    <!--Destinations-->
-    <string name="favorites_destination_title">Favorites</string>
-    <string name="map_destination_title">Map</string>
-    <string name="search_destination_title">Search</string>
-    <string name="more_destination_title">More</string>
+    <!--Navigation destinations-->
+    <string name="favorites_destination_title" translatable="true">Favorites</string>
+    <string name="map_destination_title" translatable="true">Map</string>
+    <string name="search_destination_title" translatable="true">Search</string>
+    <string name="more_destination_title" translatable="true">More</string>
 
-    <string name="no_favorites">No favorite stops yet!</string>
+    <!--Favorites-->
+    <string name="no_favorites" translatable="true">No favorite stops yet!</string>
 
-    <string name="no_data_available">No data available :(</string>
-    <string name="no_data_available_suggestions">Please check your internet connection and try again. If the problem persists the city council service that provides this information may be undergoing maintenance.</string>
-
+    <!--Stop details-->
+    <string name="no_data_available" translatable="true">No data available :(</string>
+    <string name="no_data_available_suggestions" translatable="true">Please check your internet connection and try again. If the problem persists the city council service that provides this information may be undergoing maintenance.</string>
+    <string name="no_estimate" translatable="true">No estimate</string>
+    <string name="minutes" translatable="true">minutes</string>
+    <string name="minute" translatable="true">minute</string>
+    <string name="at_the_stop" translatable="true">At the stop</string>
     <!--Preferences-->
     <string name="preferences_version_number_key" translatable="false">com.jorkoh.transportezaragozakt.PREFERENCES_VERSION_NUMBER_KEY</string>
     <string name="saved_bus_version_number_key" translatable="false">SAVED_BUS_VERSION_NUMBER_KEY</string>
     <string name="saved_tram_version_number_key" translatable="false">SAVED_TRAM_VERSION_NUMBER_KEY</string>
+
     <!--Parse-->
+    <string name="parse_application_id" translatable="false">transporte-zaragoza</string>
+    <string name="parse_server" translatable="false">https://transporte-zaragoza.herokuapp.com/parse/</string>
     <string name="parse_bus_stops_collection" translatable="false">bus_stops</string>
     <string name="parse_tram_stops_collection" translatable="false">tram_stops</string>
+
     <!--Notifications-->
-    <string name="notification_channel_id" translatable="false">com.jorkoh.transportezaragozakt.NOTIFICATION_CHANNEL_ID</string>
+    <string name="notification_channel_id_reminders" translatable="false">com.jorkoh.transportezaragozakt.NOTIFICATION_CHANNEL_ID_REMINDERS</string>
+    <string name="notification_channel_name_reminders" translatable="true">Reminders</string>
+    <string name="notification_channel_description_reminders" translatable="true">User defined notices with stop information. Manage and setup them at the reminders tab.</string>
 </resources>
