Dropped the custom navigation solution in favor of Google's implementation showcased on "NavigationAdvancedSample" with Navigation component. Also cleaned up some other things and moved stuff around.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,4 +18,5 @@
     <string name="minutes">minutos</string>
     <string name="minute">minuto</string>
     <string name="at_the_stop">En la parada</string>
+    <string name="stop_details_title">Información de la parada</string>
 </resources>
