--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="preferences_version_number_key" translatable="false">com.jorkoh.transportezaragozakt.PREFERENCES_VERSION_NUMBER_KEY</string>
     <string name="saved_bus_version_number_key" translatable="false">SAVED_BUS_VERSION_NUMBER_KEY</string>
     <string name="saved_tram_version_number_key" translatable="false">SAVED_TRAM_VERSION_NUMBER_KEY</string>
+    <string name="map_type_key" translatable="false">MAP_TYPE_KEY</string>
 
     <!--Parse-->
     <string name="parse_application_id" translatable="false">transporte-zaragoza</string>
