--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,4 +19,5 @@
     <string name="minute">minuto</string>
     <string name="at_the_stop">En la parada</string>
     <string name="stop_details_title">Información de la parada</string>
+    <string name="edit_favorite_dialog_title">Editara favorito</string>
 </resources>
