Pretty much finished favorites editing, drag and drop reordering and we will be done here

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <!--Favorites-->
     <string name="no_favorites" translatable="true">No favorite stops yet!</string>
     <string name="edit_favorite_dialog_title" translatable="true">Edit favorite</string>
+    <string name="stop_type_content_description" translatable="true">Stop type</string>
+    <string name="edit_favorite_dialog_restore" translatable="true">Restore</string>
 
     <!--Stop details-->
     <string name="no_data_available" translatable="true">No data available :(</string>
