--- a/color-picker/src/main/res/values-pt/strings.xml
+++ b/color-picker/src/main/res/values-pt/strings.xml
@@ -6,4 +6,7 @@
   <string name="cpv_custom">Personalizar</string>
   <string name="cpv_select">Selecionar</string>
   <string name="cpv_transparency">Transparência</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
