--- a/color-picker/src/main/res/values-tr/strings.xml
+++ b/color-picker/src/main/res/values-tr/strings.xml
@@ -17,4 +17,7 @@
   <string name="cpv_custom">Özel</string>
   <string name="cpv_select">Seç</string>
   <string name="cpv_transparency">Şeffaflık</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
