--- a/color-picker/src/main/res/values-cs/strings.xml
+++ b/color-picker/src/main/res/values-cs/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">Vlastní</string>
   <string name="cpv_select">Vybrat</string>
   <string name="cpv_transparency">Průhlednost</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
