--- a/color-picker/src/main/res/values-es/strings.xml
+++ b/color-picker/src/main/res/values-es/strings.xml
@@ -6,4 +6,7 @@
   <string name="cpv_custom">Personalizar</string>
   <string name="cpv_select">Seleccionar</string>
   <string name="cpv_transparency">Transparencia</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">Nuevo Alias</string>
 </resources>
