--- a/color-picker/src/main/res/values-it-rIT/strings.xml
+++ b/color-picker/src/main/res/values-it-rIT/strings.xml
@@ -19,4 +19,7 @@
   <string name="cpv_presets">Predefiniti</string>
   <string name="cpv_select">Seleziona</string>
   <string name="cpv_transparency">Trasparenza</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
