--- a/color-picker/src/main/res/values-ja/strings.xml
+++ b/color-picker/src/main/res/values-ja/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">カスタム</string>
   <string name="cpv_select">選択</string>
   <string name="cpv_transparency">透明度</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
