--- a/color-picker/src/main/res/values-nl-rNL/strings.xml
+++ b/color-picker/src/main/res/values-nl-rNL/strings.xml
@@ -17,4 +17,7 @@
   <string name="cpv_custom">Aangepast</string>
   <string name="cpv_select">Kiezen</string>
   <string name="cpv_transparency">Transparantie</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
