--- a/color-picker/src/main/res/values-pl/strings.xml
+++ b/color-picker/src/main/res/values-pl/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">Dostosuj</string>
   <string name="cpv_select">Wybierz</string>
   <string name="cpv_transparency">Przezroczystość</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
