--- a/color-picker/src/main/res/values-sk/strings.xml
+++ b/color-picker/src/main/res/values-sk/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">Vlastné</string>
   <string name="cpv_select">Vybrať</string>
   <string name="cpv_transparency">Priehľadnosť</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
