--- a/color-picker/src/main/res/values-zh/strings.xml
+++ b/color-picker/src/main/res/values-zh/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">自定义颜色</string>
   <string name="cpv_select">确认</string>
   <string name="cpv_transparency">透明度</string>
+    <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+    <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
