--- a/color-picker/src/main/res/values/strings.xml
+++ b/color-picker/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
   <string name="cpv_custom">Custom</string>
   <string name="cpv_select">Select</string>
   <string name="cpv_transparency">Transparency</string>
+  <string name="cpv_alias">ALIAS</string>
+  <string name="cpv_color">COLOR</string>
+  <string name="cpv_new_alias_hint">New Alias</string>
 </resources>
