Fixed bug, after the user gave location permission the map didn't center on the user's position properly

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,4 +22,5 @@
     <string name="edit_favorite_dialog_title">Editar favorito</string>
     <string name="stop_type_content_description">Tipo de parada</string>
     <string name="edit_favorite_dialog_restore">Restaurar</string>
+    <string name="location_rationale">Este permiso es usado para mostrar tu localización en el mapa y encontrar paradas cercanas. La información de localización nunca será usada para otro propósito</string>
 </resources>
