--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="edit_favorite_dialog_title" translatable="true">Edit favorite</string>
     <string name="stop_type_content_description" translatable="true">Stop type</string>
     <string name="edit_favorite_dialog_restore" translatable="true">Restore</string>
-
+    
     <!--Stop details-->
     <string name="no_data_available" translatable="true">No data available :(</string>
     <string name="no_data_available_suggestions" translatable="true">Please check your internet connection and try again. If the problem persists the city council service that provides this information may be undergoing maintenance.</string>
@@ -21,6 +21,10 @@
     <string name="minutes" translatable="true">minutes</string>
     <string name="minute" translatable="true">minute</string>
     <string name="at_the_stop" translatable="true">At the stop</string>
+    
+    <!--Permissions-->
+    <string name="location_rationale" translatable="true">This permission is used to display your location on the map and to find nearby stops. Location information will never be used for any other purpose.</string>
+    
     <!--Preferences-->
     <string name="preferences_version_number_key" translatable="false">com.jorkoh.transportezaragozakt.PREFERENCES_VERSION_NUMBER_KEY</string>
     <string name="saved_bus_version_number_key" translatable="false">SAVED_BUS_VERSION_NUMBER_KEY</string>
