--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,4 +35,13 @@
     <string name="edit_button">Editar</string>
     <string name="color">Color</string>
     <string name="alias">Alias</string>
+    <string name="create_reminder">Crear notificación</string>
+    <string name="restore">Restaurar</string>
+    <string name="cancel">Cancel</string>
+    <string name="restore_favorite_message">Restaura el alias y color original de este favorito.</string>
+    <string name="restore_favorite_title">¿Restaurar parada favorita?</string>
+    <string name="reminder">Notificación</string>
+    <string name="edit_reminder_dialog_title">Editar notificación</string>
+    <string name="restore_reminder_message">Restaura el alias y color original de esta notificación.</string>
+    <string name="restore_reminder_title">¿Restaurar notifiación?</string>
 </resources>
