--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,11 @@
     <string name="reminder" translatable="true">Reminder</string>
     <string name="no_reminders" translatable="true">No reminders yet!</string>
     <string name="edit_reminder_dialog_title" translatable="true">Edit reminder</string>
-    <string name="restore_reminder_title" translatable="true">Restore reminder?</string>
-    <string name="restore_reminder_message" translatable="true">Restore the original alias and color of this reminder.</string>
+    <string name="restore_reminder_title" translatable="true">Restore reminder</string>
+    <string name="restore_reminder_message" translatable="true">Do you want to restore the original alias and color of this reminder?</string>
+    <string name="delete_reminder_title" translatable="true">Delete reminder</string>
+    <string name="delete_reminder_message" translatable="true">Are you sure you want to delete this reminder? This cannot be undone.</string>
+    <string name="delete" translatable="true">Delete</string>
 
     <!--Permissions-->
     <string name="location_rationale" translatable="true">This permission is used to display your location on the map and to find nearby stops. Location information will never be used for any other purpose.</string>
