--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="restore_favorite_title" translatable="true">Restore favorite stop?</string>
     <string name="restore_favorite_message" translatable="true">Restore the original alias and color of this favorite.</string>
     <string name="cancel" translatable="true">Cancel</string>
+    <string name="delete_favorite_title" translatable="true">Delete favorite</string>
+    <string name="delete_favorite_message" translatable="true">Are you sure you want to delete this favorite? This cannot be undone.</string>
 
     <!--Stop details-->
     <string name="no_data_available" translatable="true">No data available :(</string>
