Fixed search view not retaining query when navigating between destinations, fixed stops in bottom sheet in line details not updating favorite status correctly after view recreation, almost got nearby stops to update properly and cleaned up repositories and viewModels thanks to Transformations which are something I wish I knew from the start

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="parse_server" translatable="false">https://transporte-zaragoza.herokuapp.com/parse/</string>
     <string name="parse_bus_stops_collection" translatable="false">bus_stops</string>
     <string name="parse_tram_stops_collection" translatable="false">tram_stops</string>
+    <string name="update_data_work_name" translatable="false">UPDATE_DATA_WORK_NAME</string>
 
     <!--Notifications-->
     <string name="notification_channel_id_reminders" translatable="false">com.jorkoh.transportezaragozakt.NOTIFICATION_CHANNEL_ID_REMINDERS</string>
