Improved notifications, finished setting tasks that periodically setup next reminder alarms, fixed a lot of issues with deep linking caused by the multi navigation graph implementation of bottom navigation and cleaned up other smaller stuff

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,4 +52,7 @@
     <string name="delete_favorite_title">Borrar favorito</string>
     <string name="line_details_title">Información de la línea</string>
     <string name="line">Línea</string>
+    <string name="bus_chip">BUS</string>
+    <string name="tram_chip">TRANVÍA</string>
+    <string name="notification_error">Error cargando información.</string>
 </resources>
