--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,10 @@
     <string name="delete_reminder_message" translatable="true">Are you sure you want to delete this reminder? This cannot be undone.</string>
     <string name="delete" translatable="true">Delete</string>
 
+    <!--Map-->
+    <string name="bus_chip" translatable="true">BUS</string>
+    <string name="tram_chip" translatable="true">TRAM</string>
+
     <!--Permissions-->
     <string name="location_rationale" translatable="true">This permission is used to display your location on the map and to find nearby stops. Location information will never be used for any other purpose.</string>
 
@@ -87,6 +91,8 @@
     <string name="notification_content_services_reminders" translatable="true">Preparing reminders...</string>
     <string name="notification_channel_name_services" translatable="true">Services</string>
     <string name="notification_channel_description_services" translatable="true">Foreground service notifications.</string>
+    <string name="notification_error" translatable="true">Error obtaining data.</string>
+    <string name="setup_reminders_work_name" translatable="false">SETUP_REMINDERS_WORK_NAME</string>
 
     <!--Tags-->
     <string name="map_destination_map_fragment_tag" translatable="false">map_destination_map_fragment_tag</string>
