--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="create_reminder" translatable="true">Create reminder</string>
     <string name="create_button" translatable="true">Create</string>
     <string name="shortcut_pinning_not_supported" translatable="true">Shortcuts not support in your device</string>
+    <string name="refresh_menu_item" translatable="true">Refresh</string>
 
     <!--Line details-->
     <string name="line" translatable="true">Line</string>
